--- a/kasa/src/style/banner.css
+++ b/kasa/src/style/banner.css
@@ -1,23 +1,22 @@
-.home-banner {
+.home__banner {
     height: 223px;
     width: 100%;
     position: relative;
     background-color: black;
     border-radius: 25px;
-
-
+    margin-bottom: 43px;
+    text-align: center;
 }
 
-.home-banner img {
+.home__banner img {
     width: 100%;
     height: 100%;
     border-radius: 25px;
     object-fit: cover;
     opacity: 0.7;
-
 }
 
-.home-banner h1 {
+.home__banner h1 {
     position: absolute;
     width: 60%;
     font-weight: 500;
@@ -26,31 +25,30 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
 }
 
-.line-break {
+.breakline {
     display: none;
 }
 
 @media screen and (max-width: 950px) {
-    .home-banner {
+
+    .home__banner {
         height: 111px;
         border-radius: 10px;
     }
 
-    .home-banner img {
+    .home__banner img {
         border-radius: 10px;
     }
 
-    .home-banner h1 {
+    .home__banner h1 {
         position: absolute;
         width: 80%;
         font-size: 24px;
-
     }
 
-    .line-break {
+    .breakline {
         display: inline;
     }
 }
