--- a/kasa/src/style/card.css
+++ b/kasa/src/style/card.css
@@ -1,5 +1,5 @@
 .card img {
-    position: inherit;
+    position: relative;
     z-index: 0;
     width: 340px;
     height: 340px;
@@ -17,5 +17,7 @@
     display: flex;
     align-items: flex-end;
     color: #FFFFFF;
+    margin-top: -70px;
+    margin-left: 20px;
 
 }
