--- a/kasa/src/style/banner.css
+++ b/kasa/src/style/banner.css
@@ -30,11 +30,12 @@
     display: none;
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 426px) {
 
     .home__banner {
         height: 111px;
         border-radius: 10px;
+        margin-bottom: 22px;
     }
 
     .home__banner img {
@@ -42,9 +43,13 @@
     }
 
     .home__banner h1 {
-        position: absolute;
-        width: 80%;
         font-size: 24px;
+        line-height: 100%;
+        margin-top: -79px;
+    }
+
+    .line-break {
+        display: block;
     }
 
     .breakline {
