about page done + correction

--- a/kasa/src/style/App.css
+++ b/kasa/src/style/App.css
@@ -5,3 +5,9 @@
   padding-top: 50px;
   font-family: "Montserrat";
 }
+
+@media screen and (max-width: 426px) {
+  .App {
+    padding-top: 0px;
+  }
+}
