--- a/kasa/src/style/banner.css
+++ b/kasa/src/style/banner.css
@@ -10,7 +10,7 @@
 
 .home__banner img {
     width: 100%;
-    height: 100%;
+    height: 223px;
     border-radius: 25px;
     object-fit: cover;
     opacity: 0.7;
@@ -33,15 +33,15 @@
 @media screen and (max-width: 426px) {
 
     .home__banner {
-        width: 335px;
+        width: 100%;
         height: 111px;
         border-radius: 10px;
         margin-bottom: 22px;
-        margin-left: 25px;
     }
 
     .home__banner img {
         border-radius: 10px;
+        height: inherit;
     }
 
     .home__banner h1 {
