--- a/kasa/src/style/card.css
+++ b/kasa/src/style/card.css
@@ -2,6 +2,8 @@
     position: relative;
     width: 340px;
     height: 340px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    border-radius: 10px;
 }
 
 .card img {
@@ -10,6 +12,7 @@
     width: 100%;
     height: 340px;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .card h3 {
