--- a/kasa/src/style/card.css
+++ b/kasa/src/style/card.css
@@ -7,8 +7,6 @@
 }
 
 .card img {
-    position: relative;
-    z-index: 0;
     width: 100%;
     height: 340px;
     border-radius: 10px;
@@ -32,7 +30,7 @@
 
     .card {
         width: 100%;
-        height: auto;
+        height: 255px;
     }
 
     .card img {
