--- a/kasa/src/style/carousel.css
+++ b/kasa/src/style/carousel.css
@@ -1,5 +1,4 @@
 .carousel__container {
-    width: 100%;
     height:415px;
     background-color:#FF6060;;
     mix-blend-mode: normal;
@@ -16,4 +15,34 @@
 
 .arrow__right {
     margin-right: 23.36px;
+}
+
+.number {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    top: -75px;
+}
+
+
+@media screen and (max-width:426px) {
+    
+    .carousel__container {
+        height: 255px;
+        margin: 27px 20px 15px 20px;
+    }
+
+    .arrow__left {
+        width: 11.67px;
+        height: 19.8px;
+    }
+
+    .arrow__right {
+        width: 11.67px;
+        height: 19.8px;
+    }
+
+    .number {
+        top: -50px;
+    }
 }
