--- a/kasa/src/style/card.css
+++ b/kasa/src/style/card.css
@@ -2,7 +2,6 @@
     position: relative;
     width: 100%;
     height: 340px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
     border-radius: 10px;
 }
 
@@ -11,6 +10,7 @@
     height: 340px;
     border-radius: 10px;
     object-fit: cover;
+    opacity: 0.9;
 }
 
 .card h3 {
@@ -29,7 +29,6 @@
 @media screen and (max-width: 426px) {
 
     .card {
-        width: 355px;
         height: 255px;
     }
 
