--- a/kasa/src/style/_About.scss
+++ b/kasa/src/style/_About.scss
@@ -1,8 +1,13 @@
+
 .about__banner {
     background-blend-mode: darken;
     background: black;
     border-radius: 25px;
     height: 223px;
+}
+
+.collapse__placement {
+    margin-bottom: 201px;
 }
 
 .about__banner img {
