--- a/kasa/src/style/_card.scss
+++ b/kasa/src/style/_card.scss
@@ -1,16 +1,16 @@
 .card {
     position: relative;
-    width: 100%;
     height: 340px;
     border-radius: 10px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
 }
 
 .card img {
     width: 100%;
-    height: 340px;
+    height: 100%;
     border-radius: 10px;
     object-fit: cover;
-    opacity: 0.9;
+    opacity: 0.7;
 }
 
 .card h3 {
@@ -18,7 +18,7 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 100%;
     line-height: 142.6%;
     color: #FFFFFF;
     margin-top: -70px;
@@ -30,6 +30,7 @@
 
     .card {
         height: 255px;
+        max-width: 100%;
     }
 
     .card img {
