--- a/kasa/src/style/main.css
+++ b/kasa/src/style/main.css
@@ -211,7 +211,7 @@ main {
   background: #ff6060;
   border-radius: 5px;
   height: 47px;
-  width: 90%;
+  width: 80%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -236,7 +236,7 @@ main {
 .collapse__text {
   background: #f7f7f7;
   border-radius: 0 0 5px 5px;
-  width: 90%;
+  width: 80%;
   padding: 28px 20px 7px;
 }
 
@@ -250,7 +250,7 @@ main {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 142.6%;
   color: #ff6060;
   margin-bottom: 10.33px;
@@ -262,7 +262,7 @@ main {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 142.6%;
   color: #ff6060;
   list-style-type: none;
@@ -406,6 +406,7 @@ footer p {
   }
   .nav__link {
     font-size: 12px;
+    text-transform: uppercase;
   }
 }
 main {
@@ -567,10 +568,12 @@ main {
 
 .description .collapse .collapse__title {
   height: 52px;
+  width: 90%;
 }
 
 .description .collapse .collapse__text {
   height: 249px;
+  width: 90%;
 }
 
 .star {
@@ -679,6 +682,7 @@ main {
   }
   .collapse__box .collapse .collapse__text {
     height: 143px;
+    width: 100%;
   }
   .collapse__box .collapse .collapse__text p {
     font-size: 12px;
