--- a/kasa/src/style/_header.scss
+++ b/kasa/src/style/_header.scss
@@ -30,6 +30,8 @@
 
 .active__link {
     text-decoration-line: underline;
+    text-decoration-thickness: 1.5px;
+    text-underline-offset: 2px;
 }
 
 @media screen and (max-width: 426px) {
@@ -40,7 +42,7 @@
 
     .navigation {
         display: flex;
-        gap: 20px;
+        gap: 10px;
     }
 
     .kasa__logo img{
