--- a/kasa/src/style/main.css
+++ b/kasa/src/style/main.css
@@ -390,6 +390,8 @@ footer p {
 
 .active__link {
   text-decoration-line: underline;
+  text-decoration-thickness: 1.5px;
+  text-underline-offset: 2px;
 }
 
 @media screen and (max-width: 426px) {
@@ -398,7 +400,7 @@ footer p {
   }
   .navigation {
     display: flex;
-    gap: 20px;
+    gap: 10px;
   }
   .kasa__logo img {
     width: 145px;
